Add support for class-based PDF generation and concurrency
Introduced functionality to wait for element classes before generating PDFs, alongside existing ID support. Added a `run_parallel_curl` script for testing concurrent requests and updated the Makefile for streamlined API testing. Enhanced resource limits in `docker-compose.yaml` and improved PDF handling in key backend modules.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,9 +1,12 @@
-version: "3.8"
-
 services:
   web-provider-app:
     image: nginx:latest
     container_name: web-provider-app
+    deploy:
+      resources:
+        limits:
+          cpus: "1"
+          memory: "68mb"
     ports:
       - "3000:80"
     volumes:
@@ -15,6 +18,11 @@ services:
       context: .
       dockerfile: Dockerfile
     container_name: pdf-generator-app
+    deploy:
+      resources:
+        limits:
+          cpus: "1"
+          memory: "5012mb"
     ports:
       - "8080:80"
       - "9223:9223"
