Adjust resource limits in docker-compose.yaml.
Increased CPU limit to 4 and reduced memory limit to 2048MB. This change aims to optimize resource allocation for better performance and efficiency.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,8 +21,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: "1"
-          memory: "5012mb"
+          cpus: "4"
+          memory: "2048MB"
     ports:
       - "8080:80"
       - "9223:9223"
